# canncamp

./: .gitignore  LICENSE  README.en.md  README.md
application-camp/: README.md
application-camp/application_flyingdown/: README.md
application-camp/application_flyingdown/inc/: colorize_helper.h  main.h
application-camp/application_flyingdown/src/: CMakeLists.txt  colorize_helper.cpp  main.cpp
application-camp/application_hw3893615/: README.md
application-camp/application_hw3893615/inc/: colorization.h
application-camp/application_hw3893615/src/: CMakeLists.txt  colorization.cpp
application-camp/application_hw63723198/: .project  CMakeLists.txt  README_CN.md
application-camp/application_hw63723198/inc/: age_estimation.h  (+2 more)
application-camp/application_riddle/: README.md
application-camp/application_yexijoe/: README_CN.md
application-camp/application_zhanghui_china/: README.md
application-camp/face_detect_by_shangke_sks/: CMakeLists.txt  README.md
final_homework/: README.md
final_homework/liulin2021/: readme.docx
final_homework/neoming/: README.md
final_homework/neoming/SubApp/src/: CMakeLists.txt  main.cpp
mindxsdk_camp/: README.md
operator_camp/: 1.md  2.md  3.md  README.md
training_camp/: README.md  task_1.md  task_2.md  task_3.md
training_camp/ppt/: 2.TF训练脚本迁移.pptx  4.TF网络训练性能分析.pptx
training_camp/sample-alexnet/: .gitignore  README.md
training_camp/task_1_flyingdown/: task_1.md
training_camp/task_1_hw38939615/: task_1.md
training_camp/task_1_lin6413/: README.md  train.py
training_camp/task_3_zhanghui_china/: task3.md
(+368 files in other folders)
